<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <PreferenceCategory
        android:summary="@string/theme_category_summary"
        android:title="@string/theme_title" >
        
        <ListPreference
            android:defaultValue="a"
            android:entries="@array/themeOptions"
            android:entryValues="@array/themeValues"
            android:key="theme"
            android:summary="@string/theme_summary"
            android:title="@string/theme_title" />
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:summary="@string/function_category_summary"
        android:title="Function" >
        
        <EditTextPreference 
    		android:defaultValue="10" 
    		android:title="@string/precision_title" 
    		android:summary="@string/precision_summary"
    		android:key="precision"
    		android:inputType="number" />  
    		
        <ListPreference
            android:defaultValue="a"
            android:entries="@array/angleOptions"
            android:entryValues="@array/angleValues"
            android:key="angle"
            android:summary="@string/angle_summary"
            android:title="@string/angle_title" />

        
    </PreferenceCategory>
    
        <PreferenceCategory
        android:summary="@string/bar_category_summary"
        android:title="@string/bar_category_title" >
        
            <CheckBoxPreference
                android:defaultValue="true"
                android:title="@string/colored_notificationbar_title"
                android:summary="@string/colored_notificationbar_summary"
                android:key="colored_notification_bar"/>
        
            <CheckBoxPreference
                android:defaultValue="false"
                android:title="@string/colored_navigationbar_title"
                android:summary="@string/colored_navigationbar_summary"
                android:key="colored_navigation_bar"/>

    </PreferenceCategory>
    

</PreferenceScreen>